gitops/immich/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: immich-server
          image: registry.rupan.dev/upstream/ghcr.io/immich-app/immich-server@sha256:b434cb9287eea1471c9974845914d4dd328c9c2d652e446ed4930f99944f0ceb  # yamllint disable-line rule:line-length
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: library
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              memory: 8Gi
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2283
