gitops/immich/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-valkey
  template:
    metadata:
      labels:
        app: immich-valkey
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: valkey
          image: registry.rupan.dev/upstream/docker.io/valkey/valkey@sha256:c123e3715db63d06d4ad6964884037aa0d5d4d703939b9929954112889708e1d  # yamllint disable-line rule:line-length
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 999
          volumeMounts:
            - name: valkey-data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: valkey-data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: immich-valkey
